# MyQtPlayer

./: README.md
myQtPlayer/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  main.cpp
